<resources>
    <string name="app_name">Homework5</string>
    <string name="reels_label">Reels</string>
    <string name="reels_preview_content_description">Reels preview</string>
    <string name="profile_pic_content_description">Profile pic</string>
    <string name="music_icon_content_description">Music note icon</string>
    <string name="camera_content_description">Camera icon</string>
    <string name="used_audio_example">Original music</string>
    <string name="reels_description_example">Try at your own risk</string>
    <string name="username_example">awsm_jane</string>
    <string name="follow">Follow</string>
    <string name="likes_number_example">19.6k</string>
    <string name="like_btn_content_description">Like</string>
    <string name="comment_btn_content_description">Comment</string>
    <string name="comments_number_example">110</string>
    <string name="share_btn_content_description">Share</string>
    <string name="settings">Settings</string>
    <string name="archive">Archive</string>
    <string name="activity">Your activity</string>
    <string name="qr_code">QR code</string>
    <string name="saved">Saved</string>
    <string name="close_friends">Close friends</string>
    <string name="discover_people">Discover people</string>
    <string name="covid_info_center">Covid-19 Information Center</string>
</resources>