<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_900"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/linear_horizontal_padding"
    android:paddingTop="@dimen/linear_top_padding">

    <TextView
        android:id="@+id/settings_text"
        style="@style/text_settings_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_menu_item"
        android:drawablePadding="@dimen/drawable_padding"
        android:fontFamily="@font/roboto_light"
        android:text="@string/settings"
        app:drawableStartCompat="@drawable/ic_settings" />

    <TextView
        android:id="@+id/archive_text"
        style="@style/text_settings_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_menu_item"
        android:drawablePadding="@dimen/drawable_padding"
        android:text="@string/archive"
        app:drawableStartCompat="@drawable/ic_archive" />

    <TextView
        android:id="@+id/activity_text"
        style="@style/text_settings_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_menu_item"
        android:drawablePadding="@dimen/drawable_padding"
        android:text="@string/activity"
        app:drawableStartCompat="@drawable/ic_history" />

    <TextView
        android:id="@+id/qr_code_text"
        style="@style/text_settings_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_menu_item"
        android:drawablePadding="@dimen/drawable_padding"
        android:text="@string/qr_code"
        app:drawableStartCompat="@drawable/ic_qr_code" />

    <TextView
        android:id="@+id/saved_text"
        style="@style/text_settings_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_menu_item"
        android:drawablePadding="@dimen/drawable_padding"
        android:text="@string/saved"
        app:drawableStartCompat="@drawable/ic_save" />

    <TextView
        android:id="@+id/close_friends_text"
        style="@style/text_settings_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_menu_item"
        android:drawablePadding="@dimen/drawable_padding"
        android:text="@string/close_friends"
        app:drawableStartCompat="@drawable/ic_list" />

    <TextView
        android:id="@+id/discover_people_text"
        style="@style/text_settings_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_menu_item"
        android:drawablePadding="@dimen/drawable_padding"
        android:text="@string/discover_people"
        app:drawableStartCompat="@drawable/ic_discover_people" />

    <TextView
        android:id="@+id/covid_info_text"
        style="@style/text_settings_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_menu_item"
        android:drawablePadding="@dimen/drawable_padding"
        android:text="@string/covid_info_center"
        app:drawableStartCompat="@drawable/ic_info" />
</LinearLayout>